# bow_text_classifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
models/: bow.pth
models/bow_model/: model.pth  tag_to_index.json  word_to_index.json
notebooks/: model_demo.ipynb  model_test.ipynb
scripts/: inference.py
src/bow_text_classifier/: __init__.py  data.py  nn.py  server.py
test/: conftest.py  test_data.py
