[tool.poetry]
name = "bow-text-classifier"
version = "0.1.0"
description = ""
authors = ["Luan van Pletsen <luanvanpletsen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
